--- a/style.css
+++ b/style.css
@@ -1,60 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;700&display=swap');
 
-*,
-*::before,
-*::after {
+*{
     margin: 0;
     padding: 0;
-    outline: 0;
-    /* border: 0; */
-    text-decoration: none;
-    list-style-type: none;
     box-sizing: border-box;
 
 }
 
-html {
-    font-size: 0.85rem;
-}
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'outfit', sans-serif;
     background-color: hsl(212, 45%, 89%);
     font-size: 15px;
-    width: 100px
+    /* width: 100px; */
+    margin: auto;
 }
 
 .container {
-    text-align: center;
-    margin: 10rem 15rem 1rem 41rem;
-
-
-}
-
-.container-Qr {
-    width: 28rem;
-    height: 38rem;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
     background-color: hsl(0, 0%, 100%);
-    border-radius: 5%;
+    width: 16rem;
+    padding: 15px;
+    text-align: center;
+    border-radius: 4%;
 }
 
 .code-qr {
     text-align: center;
-    width: 22rem;
-    height: 22rem;
+    width: 14rem;
+    height: 14rem;
     border-radius: 1rem;
-    margin: 2rem -2rem 1.5rem -2rem;
+   
     
 }
 
 h1 {
-    margin-bottom: 1rem;
     color: hsl(218, 44%, 22%);
     font-size: 18px;
-    
+    margin: 1rem 0;
 }
 
 p {
-    font-size: 15px;
+    font-size: 13px;
     color: hsl(220, 15%, 55%);
 }
 
@@ -64,21 +55,19 @@ p {
         font-size: 10px;
     }
     .container {
-        margin-left:1.5rem;
+        /* margin-left:1.5rem; */
         text-align: center;
+        width: 18rem;
+        height: 27rem;  
     }
 
-    .container-Qr{
-        width: 22rem;
-        height: 35rem;  
-    }
 
     .code-qr{
         text-align: center;
-        width: 20rem;
-        height: 20rem;
+        width: 16rem;
+        height: 16rem;
         border-radius: 1rem;
-        margin: 1rem -2rem 1rem -2rem;
+        /* margin: 1rem -2rem 1rem -2rem; */
           
     }
     
